Added one single BaseManagerController and replaced it with the logic of all the 3 menu views. Now all the menu views work correctly